--- a/views/user/index.hbs
+++ b/views/user/index.hbs
@@ -1,85 +1,262 @@
-<link rel="stylesheet" href="css/style.css" media="screen">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/templatemo-lava.css">
 
-<div class="main">
-    <header class="u-clearfix u-header u-header" id="sec-c174">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="/" class="u-image u-logo u-image-1">
-            <img src="images/logo.png" width="200px" class="u-logo-image ">
-        </a>
 
+<!-- ***** Header Area Start ***** -->
+<header class="header-area header-sticky">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav class="main-nav">
+                    <!-- ***** Logo Start ***** -->
+                    <a href="/" class="logo">
+                        <img src="/images/logo.png" alt="logo" width="150px">
+                    </a>
+                    <!-- ***** Logo End ***** -->
+                    <!-- ***** Menu Start ***** -->
+                    <ul class="nav">
+                        <li class="scroll-to-section"><a href="#welcome" class="menu-item">Home</a></li>
+                        <li class="scroll-to-section"><a href="#about" class="menu-item">About</a></li>
+                        <li class="scroll-to-section"><a href="#services" class="menu-item">Services</a>
+                        </li>
+                        <li class="submenu">
+                            <a style="cursor: pointer;">Drop Down</a>
+                            <ul>
+                                <li><a href="/login">Log In</a></li>
+                                <li><a href="/signup">Sign Up</a></li>
+                            </ul>
+                        </li>
+                        <li class="scroll-to-section"><a href="/guest/contact">Contact Us</a></li>
+                    </ul>
+                    <a class='menu-trigger'>
+                        <span>Menu</span>
+                    </a>
+                    <!-- ***** Menu End ***** -->
+                </nav>
+            </div>
+        </div>
     </div>
-    
 </header>
-<section class="u-clearfix u-expand-resize u-image u-section-1" id="carousel_5d56">
-    <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
-            <div class="u-layout">
-                <div class="u-layout-row">
-                    <div
-                        class="u-align-left u-container-style u-layout-cell u-left-cell u-similar-fill u-size-27-xl u-size-33-lg u-size-35-md u-size-35-sm u-size-35-xs u-layout-cell-1">
-                        <div class="u-container-layout u-valign-middle u-container-layout-1">
-                            <h6 class="u-text u-text-palette-1-dark-3 u-text-1" style="margin-top: 69px; color: #fff !important;">
-                                best social media booster</h6>
-                            <h1 class="u-text u-text-palette-3-base u-title u-text-2">let us boost</h1>
-                            <div class="container">
-                                <div class="d-flex justify-content-center h-100">
-                                    <div class="card1">
-                                        <div class="card-header">
-                                            <h3>Sign In</h3>
-                                            <div class="d-flex justify-content-end social_icon">
-                                                <span><i class="fab fa-facebook-square"></i></span>
-                                                <span><i class="fab fa-google-plus-square"></i></span>
-                                                <span><i class="fab fa-twitter-square"></i></span>
-                                            </div>
-                                        </div>
-                                        <div class="card-body" style="margin-bottom: 35px;">
-                                            <form id="login-form">
-                                                <div class="input-group form-group">
-                                                    <div class="input-group-prepend">
-                                                        <span class="input-group-text"><i
-                                                                class="fas fa-user"></i></span>
-                                                    </div>
-                                                    <input type="text" class="form-control" placeholder="username" name="username">
+<!-- ***** Header Area End ***** -->
 
-                                                </div>
-                                                <div class="input-group form-group">
-                                                    <div class="input-group-prepend">
-                                                        <span class="input-group-text"><i class="fas fa-key"></i></span>
-                                                    </div>
-                                                    <input type="password" class="form-control" placeholder="password" name="password">
-                                                </div>
-                                                <div class="row align-items-center remember">
-                                                    <input type="checkbox">Remember Me
-                                                </div>
-                                                <div class="form-group">
-                                                    <input type="submit" value="Login"
-                                                        class="btn float-right login_btn">
-                                                </div>
-                                            </form>
-                                        </div>
-                                        <div class="card-footer">
-                                            <div class="d-flex justify-content-center links">
-                                                Don't have an account?<a href="/singup">Sign Up</a>
-                                            </div>
-                                            <div class="d-flex justify-content-center">
-                                                <a href="#">Forgot your password?</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div
-                        class="u-align-center u-container-style u-expand-resize u-layout-cell u-right-cell u-similar-fill u-size-25-md u-size-25-sm u-size-25-xs u-size-27-lg u-size-33-xl u-layout-cell-2">
-                        <div class="u-container-layout u-valign-middle u-container-layout-2">
-                            <img class="u-image u-image-contain u-image-1" src="images/f.png">
-                        </div>
-                    </div>
+
+<!-- ***** Welcome Area Start ***** -->
+<div class="welcome-area" id="welcome">
+
+    <!-- ***** Header Text Start ***** -->
+    <div class="header-text">
+        <div class="container">
+            <div class="row">
+                <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12 text-uppercase"
+                    data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                    <h1>boost your <em>social media</em> with us</h1>
+
+                    <a href="/login" class="main-button-slider">log in</a>
+                    <a href="/signup" class="main-button-slider">sign up</a>
                 </div>
             </div>
         </div>
     </div>
-</section>
+    <!-- ***** Header Text End ***** -->
 </div>
+<!-- ***** Welcome Area End ***** -->
+<!-- Start home-about Area -->
+<section class="section" id="about">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md-6">
+                <img class="img-fluid" src="images/header_block.png" alt="">
+            </div>
+            <div class="col-md-6">
+                <h1 class="text-uppercase"> <b>About Us</b> </h1>
+                <p class="mb-4 limited-line">{{about.about}}</p>
+                <a href="/guest/about" class="main-button-slider text-uppercase">View Full Details</a>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End home-about Area -->
+<!-- ***** Features Big Item Start ***** -->
+<section class="section" id="services">
+    <div class="container">
+        <div class="row">
+            {{#each service}}
+            <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12"
+                data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                <div class="features-item">
+                    <div class="features-icon">
+                        <img src="/images/service/{{_id}}.jpg" alt="">
+                        <h4>{{serviceName}}</h4>
+                        <a href="" class="main-button cd-popup-trigger-sub-{{@index}}">
+                            Show Plan
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="cd-popup-sub cd-popup-sub-{{@index}}" role="alert">
+                <div class="cd-popup-container">
+                    <h4 class="p-3" style="font-weight: bold;">Select a service:</h4>
+                    {{#each subServices}}
+                    <a href="/guest/plans?service={{serviceName}}&id={{../_id}}">
+                        <h6 class="serviceName ">{{serviceName}}</h6>
+                    </a>
+                    <hr>
+                    {{/each}}
+                    <a href="#0" class="cd-popup-close img-replace">Close</a>
+                </div> <!-- cd-popup-container -->
+            </div> <!-- cd-popup -->
+            {{/each}}
+        </div>
+    </div>
+</section>
+<!-- ***** Features Big Item End ***** -->
+
+<div class="left-image-decor"></div>
+
+<!-- ***** Features Big Item Start ***** -->
+<section class="section" id="promotion">
+    <div class="container">
+        <div class="row">
+            <div class="left-image col-lg-5 col-md-12 col-sm-12 mobile-bottom-fix-big"
+                data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                <img src="/images/left-image.png" class="rounded img-fluid d-block mx-auto" alt="App">
+            </div>
+            <div class="right-text offset-lg-1 col-lg-6 col-md-12 col-sm-12 mobile-bottom-fix">
+                <ul>
+                    <li data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
+                        <img src="/images/about-icon-01.png" alt="">
+                        <div class="text">
+                            <h4>CHEAP AND INEXPENSIVE</h4>
+                            <p>We pride ourselves not just in the high quality of services that we offer and our
+                                customers have come to expect, but also with our competitive prices! </p>
+                        </div>
+                    </li>
+                    <li data-scroll-reveal="enter right move 30px over 0.6s after 0.5s">
+                        <img src="/images/about-icon-02.png" alt="">
+                        <div class="text">
+                            <h4>Killer Support</h4>
+                            <p>Our services main goal is to keep our customers happy. Our staff is 24/7 available to
+                                answer your regards.</p>
+                        </div>
+                    </li>
+                    <li data-scroll-reveal="enter right move 30px over 0.6s after 0.6s">
+                        <img src="/images/about-icon-03.png" alt="">
+                        <div class="text">
+                            <h4>Full Control</h4>
+                            <p>You have full control of your accounts, you can decide which groups to join and how many
+                                likes to get on each post!</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- ***** Features Big Item End ***** -->
+
+<div class="right-image-decor"></div>
+
+<section class="section">
+    <div class="center">
+        <div class="counter col_fourth">
+            <i class="fa fa-cart-plus fa-2x"></i>
+            <h2 class="timer count-title count-number" data-to="11900" data-speed="1500"></h2>
+            <p class="count-text ">Orders Completed</p>
+        </div>
+
+        <div class="counter col_fourth">
+            <i class="fa fa-users fa-2x"></i>
+            <h2 class="timer count-title count-number" data-to="1700" data-speed="1500"></h2>
+            <p class="count-text ">Happy Clients</p>
+        </div>
+
+        <div class="counter col_fourth">
+            <i class="fa fa-briefcase fa-2x"></i>
+            <h2 class="timer count-title count-number" data-to="10" data-speed="1500"></h2>
+            <p class="count-text ">Services</p>
+        </div>
+
+        <div class="counter col_fourth end">
+            <i class="fa fa-lightbulb-o fa-2x"></i>
+            <h2 class="timer count-title count-number" data-to="120" data-speed="1500"></h2>
+            <p class="count-text ">Plans</p>
+        </div>
+    </div>
+</section>
+
+
+
+<!-- ***** Footer Start ***** -->
+<footer id="contact-us">
+    <div class="container">
+        <div class="footer-content">
+            <div class="row">
+                <!-- ***** Contact Form Start ***** -->
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="contact-form">
+                        <form id="contact-form">
+                            <div class="row">
+                                <div class="col-md-6 col-sm-12">
+                                    <fieldset>
+                                        <input name="fname" type="text" id="name" placeholder="Full Name" required=""
+                                            style="background-color: rgba(250,250,250,0.3);">
+                                    </fieldset>
+                                </div>
+                                <input type="hidden" name="time" id="time">
+                                <input type="hidden" name="date" id="date">
+                                <script>
+                                    var time = new Date().toLocaleTimeString()
+                                    var date = new Date().toLocaleDateString()
+                                    document.getElementById('time').value = time
+                                    document.getElementById('date').value = date
+                                </script>
+                                <div class="col-md-6 col-sm-12">
+                                    <fieldset>
+                                        <input name="email" type="email" id="email" placeholder="E-Mail Address"
+                                            required="" style="background-color: rgba(250,250,250,0.3);">
+                                    </fieldset>
+                                </div>
+                                <div class="col-lg-12">
+                                    <fieldset>
+                                        <textarea name="message" rows="6" id="message" placeholder="Your Message"
+                                            required="" style="background-color: rgba(250,250,250,0.3);"></textarea>
+                                    </fieldset>
+                                </div>
+                                <div class="col-lg-12">
+                                    <fieldset>
+                                        <button type="submit" id="form-submit" class="main-button">Send Message
+                                            Now</button>
+                                    </fieldset>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <!-- ***** Contact Form End ***** -->
+                <div class="right-content col-lg-6 col-md-12 col-sm-12">
+                    <h2>More About <em>Rich Booster</em></h2>
+                    <p class="limited-line">{{about.about}}</p>
+                    <ul class="social">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="sub-footer">
+                    <p>
+
+                        Copyright &copy;
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved by <a href="#"
+                            target="_blank">Marp cretions</a>
+
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
