--- a/views/user/sign-up.hbs
+++ b/views/user/sign-up.hbs
@@ -16,7 +16,7 @@
                 <h5 class="card-title">Register New Account</h5>
             </div>
             <div class="card-body">
-                <form id="singup-form">
+                <form id="signup-form">
                     <div class="row">
                         <div class="col-md-5 pr-1">
                             <div class="form-group">
