--- a/public/css/main.css
+++ b/public/css/main.css
@@ -354,9 +354,9 @@ input:focus {
 .brands-area,
 .about-banner,
 .sb_bar {
-  background   : rgb(253, 187, 45);
-  background   : linear-gradient(145deg, rgba(253, 187, 45, 1) 0%, rgba(253, 126, 20, 0.7497198708584997) 100%);
-  
+  background: rgb(253, 187, 45);
+  background: linear-gradient(145deg, rgba(253, 187, 45, 1) 0%, rgba(253, 126, 20, 0.7497198708584997) 100%);
+
   /* background: -moz-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
   background: -webkit-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
   background: -ms-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%); */
@@ -886,8 +886,8 @@ xpopup
   -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
   -moz-transition   : opacity 0.3s 0s, visibility 0s 0.3s;
   transition        : opacity 0.3s 0s, visibility 0s 0.3s;
-  overflow-y: scroll;
-  z-index: 1;
+  overflow-y        : scroll;
+  z-index           : 100;
 }
 
 .cd-popup.is-visible,
@@ -1335,9 +1335,243 @@ xpopup
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-li{
+li {
   list-style: none
 }
 
-.serviceName{
+.serviceName {}
+
+
+
+/* 
+---------------------------------------------
+preloader
+--------------------------------------------- 
+*/
+#preloader {
+  overflow        : hidden;
+  background-image: linear-gradient(145deg, #f4813f 0%, #ffc107 100%);
+  left            : 0;
+  right           : 0;
+  top             : 0;
+  bottom          : 0;
+  position        : fixed;
+  z-index         : 9999;
+  color           : #fff;
+}
+
+#preloader .jumper {
+  left    : 0;
+  top     : 0;
+  right   : 0;
+  bottom  : 0;
+  display : block;
+  position: absolute;
+  margin  : auto;
+  width   : 50px;
+  height  : 50px;
+}
+
+#preloader .jumper>div {
+  background-color           : #fff;
+  width                      : 10px;
+  height                     : 10px;
+  border-radius              : 100%;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode        : both;
+  position                   : absolute;
+  opacity                    : 0;
+  width                      : 50px;
+  height                     : 50px;
+  -webkit-animation          : jumper 1s 0s linear infinite;
+  animation                  : jumper 1s 0s linear infinite;
+}
+
+#preloader .jumper>div:nth-child(2) {
+  -webkit-animation-delay: 0.33333s;
+  animation-delay        : 0.33333s;
+}
+
+#preloader .jumper>div:nth-child(3) {
+  -webkit-animation-delay: 0.66666s;
+  animation-delay        : 0.66666s;
+}
+
+@-webkit-keyframes jumper {
+  0% {
+    opacity          : 0;
+    -webkit-transform: scale(0);
+    transform        : scale(0);
+  }
+
+  5% {
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform        : scale(1);
+    opacity          : 0;
+  }
+}
+
+@keyframes jumper {
+  0% {
+    opacity          : 0;
+    -webkit-transform: scale(0);
+    transform        : scale(0);
+  }
+
+  5% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.limited-line {
+  overflow          : hidden;
+  display           : -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
+
+}
+
+
+
+/*-=-=-=-=-=-=-=-=-=-=-=- */
+/* Column Grids */
+/*-=-=-=-=-=-=-=-=-=-=-=- */
+
+.col_half {
+  width: 49%;
+}
+
+.col_third {
+  width: 32%;
+}
+
+.col_fourth {
+  width: 23.5%;
+}
+
+.col_fifth {
+  width: 18.4%;
+}
+
+.col_sixth {
+  width: 15%;
+}
+
+.col_three_fourth {
+  width: 74.5%;
+}
+
+.col_twothird {
+  width: 66%;
+}
+
+.col_half,
+.col_third,
+.col_twothird,
+.col_fourth,
+.col_three_fourth,
+.col_fifth {
+  position     : relative;
+  display      : inline;
+  display      : inline-block;
+  float        : left;
+  margin-right : 2%;
+  margin-bottom: 20px;
+}
+
+.end {
+  margin-right: 0 !important;
+}
+
+/* Column Grids End */
+
+.center {
+  width   : 980px;
+  margin  : 30px auto;
+  position: relative;
+}
+
+.counter {
+  background-image: linear-gradient(145deg, #f4813f 0%, #f1556a 100%);
+  padding         : 20px 0;
+  border-radius   : 5px;
+}
+
+.count-title {
+  font-size    : 40px;
+  font-weight  : normal;
+  margin-top   : 10px;
+  margin-bottom: 0;
+  text-align   : center;
+}
+
+.count-text {
+  color: #fff;
+  font-size    : 13px;
+  font-weight  : normal;
+  margin-top   : 10px;
+  margin-bottom: 0;
+  text-align   : center;
+}
+
+.fa-2x {
+  margin : 0 auto;
+  float  : none;
+  display: table;
+  color  : #fff;
+}
+
+
+.center {
+  text-align: center;
+}
+
+.timer{
+  font-weight: bold;
+}
+
+/* guest header */
+.navbar-main{
+  position: fixed;
+  top:0;
+  width: 100%;
+  height: 80px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #111;
+  z-index: 10;
+}
+.logo-main{
+  position: fixed;
+  left: 55px;
+  top: 10px;
+}
+
+.menu{
+  position: fixed;
+  right: 55px;
+  top: 27px;
+}
+
+.menu li{
+  display: inline;
+  padding: 5px 10px;
+}
+
+.menu li a{
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.menu li a:hover{
+  color: #ffc107 !important;
 }
