--- a/views/user/contact.hbs
+++ b/views/user/contact.hbs
@@ -50,7 +50,7 @@
                         <div class="col-12">
                             <div class="form-group">
                                 <label>Message</label>
-                            <textarea name="message" id="message" cols="96" rows="10"></textarea>
+                            <textarea name="message" id="message" cols="96" rows="10" style="width: 100%;"></textarea>
                             </div>
                         </div>
                     </div>
